[package]
name = "blockchain-rs"
version = "0.1.0"
authors = ["AnNiran <angelowwa@gmail.com>"]
edition = "2018"
description = "blockchain example implementation in Rust 9btc based)"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
